[project]
name = "comfyui-trackingnodes"
description = "A set of nodes to track objects through videos using YOLO and other processors."
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy", "supervision", "ultralytics", "timm", "scikit-image"]

[project.urls]
Repository = "https://github.com/logtd/ComfyUI-TrackingNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TrackingNodes"
Icon = ""
